--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 2: GPs for Non-Gaussian Likelihoods and Big Data\n",
+    "# Lab 2: GPs for Non-Gaussian Likelihoods\n",
     "\n",
     "This lab introduces Gaussian processes for data with non-Gaussian likelihoods, and shows how this can be applied to classification. \n",
     "\n",
@@ -904,7 +904,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -918,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
